--- a/package.json
+++ b/package.json
@@ -4,18 +4,48 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --watch 'lib/**/*' -e ts,tsx --exec ts-node ./lib/app.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.1.0",
+    "@koa/router": "^10.0.0",
+    "@types/uuid": "^8.3.0",
+    "class-validator": "^0.13.1",
+    "cron": "^1.8.2",
+    "dotenv": "^8.2.0",
     "koa": "^2.13.1",
-    "koa-router": "^10.0.0"
+    "koa-bodyparser": "^4.3.0",
+    "koa-helmet": "^6.0.0",
+    "koa-json": "^2.0.2",
+    "koa-jwt": "^4.0.0",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^10.0.0",
+    "koa-ts-controllers": "^2.3.0",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.4.0",
+    "sequelize-typescript": "^2.0.0",
+    "tedious": "^6.7.0"
   },
   "devDependencies": {
+    "@types/cron": "^1.7.2",
     "@types/koa": "^2.11.6",
+    "@types/koa-bodyparser": "^4.3.0",
+    "@types/koa-helmet": "^6.0.1",
+    "@types/koa-json": "^2.0.18",
+    "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.4.1",
+    "@types/koa__cors": "^3.0.2",
+    "@types/node": "^14.14.22",
+    "@types/validator": "^13.1.3",
+    "@types/winston": "^2.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
+    "eslint": "^7.18.0",
     "nodemon": "^2.0.7",
+    "sequelize-cli": "^6.2.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
